--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -91,7 +91,7 @@
 
 \datedsubsection{City University of Hong Kong, China}{Part-time Research Assistant}{Sep 2021 - April 2022}
 \workitemstwo
-{Investigated the topic of Deep Learning Models compression and lightweight, and the deployment on mobile devices.}
+{Investigated the topic of Deep Learning models compression and lightweight, and the deployment on mobile devices.}
 {Funded by my mentor (Dr. Shiqi Wang) to cover tuition fees and living expenses in HK.}
 
 \hspace*{\fill} 
@@ -147,14 +147,14 @@
 
 \section{Awards}
 
-\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} \hfill Oct 2021\\
+\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} (01:38:14) \hfill Oct 2021\\
 2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
 2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
 2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
 2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
 Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
 Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
-Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
+Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} (01:47:36) \hfill Jun 2017\\
 2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
 The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
 
