--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -40,6 +40,14 @@
 \section{Research}
 
 \workitemsone
+{No-reference Image Quality Assessment via Non-local Modeling. \\
+	Shuyue Jia, Baoliang Chen, Dingquan Li, Shiqi Wang. \\
+	To be submitted.
+}
+
+\hspace*{\fill}
+
+\workitemsone
 {Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
 	\emph{Frontiers in Bioengineering and Biotechnology}, 2021. (Accepted)
