--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -50,7 +50,7 @@
 \workitemsone
 {Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
-	\emph{Frontiers in Bioengineering and Biotechnology}, 2021. (Accepted)
+	\emph{Frontiers in Bioengineering and Biotechnology}, 2021. (Published)
 }
 
 \hspace*{\fill}
@@ -90,7 +90,7 @@
 \workitemsone
 {Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals. \href{https://arxiv.org/abs/2007.13484}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	\textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Yan Shi, and Yang Li.\\
-	\emph{arXiv preprint arXiv:2007.13484}, 2022. (Rejected by MICCAI 2020; To be submitted in 2022)
+	\emph{arXiv preprint arXiv:2007.13484}, 2022. (Rejected by MICCAI 2020; To be submitted)
 }
 	
 \hspace*{\fill}
@@ -102,7 +102,7 @@
 {Investigated the topic of Deep Learning models compression and lightweight, and the deployment on mobile devices.}
 {Funded by my mentor (Dr. Shiqi Wang) to cover tuition fees and living expenses in HK.}
 
-\hspace*{\fill} 
+\hspace*{\fill}
 
 \datedsubsection{Tencent Video, Beijing, China}{Recommender System Intern}{Oct - Dec 2020}
 \workitemstwo
@@ -143,15 +143,7 @@
 {Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
 {The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
 
-\hspace*{\fill} 
-%
-%\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
-%\workitemsthree
-%{Successfully implemented YOLO-V2 and Faster-RCNN object detection algorithms under Windows \& Ubuntu OS using the official butterfly dataset.}
-%{Used affine transformation, noise addition, contrast enhancement, rotation, symmetry changing, and other methods to extend the dataset.}
-%{YOLO-V2 Results (Team A106): 71.42\% Averaged IoU, and unsatisfactory classification accuracy.}
-
-%\hspace*{\fill} 
+\hspace*{\fill}
 
 \section{Awards}
 
