--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -10,7 +10,7 @@
 
 \longcontact
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
-{(+1) 213-296-5422}
+{(+852) 5460-4494}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
 {\href{https://resume.github.io/?SuperBruceJia}{GitHub Résumé}}
 {\href{http://shuyuej.com/blog}{Blog}}
@@ -19,13 +19,13 @@
 \hspace*{\fill} 
 
 \section{Education}
-\datedsubsection{City University of Hong Kong, China}{}{May 2021 - Present}
+\datedsubsection{City University of Hong Kong, Hong Kong, China}{}{May 2021 - Present}
 \workitemsthree
 {M.Phil., Computer Science Major, GPA: 3.50/4.0}
 {Supervisor: Dr. Shiqi Wang, Research area: Image Quality Assessment and Perceptual Optimization}
 {Selected coursework: Big Data Algorithms and Techniques (A), Machine Learning Algorithms and Applications (B)}
 
-\datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
+\datedsubsection{Northeast Electric Power University, Jilin, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
 {B.Eng., Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: Prof. Yimin Hou and Dr. Jinglei Lv, Research area: EEG Signals Processing based on DL Methods}
@@ -41,7 +41,7 @@
 
 \workitemsone
 {No-reference Image Quality Assessment via Non-local Modeling. \\
-	Shuyue Jia, Baoliang Chen, Dingquan Li, Shiqi Wang. \\
+	\textbf{Shuyue Jia}, Baoliang Chen, Dingquan Li, Shiqi Wang. \\
 	To be submitted.
 }
 
@@ -64,7 +64,7 @@
 \hspace*{\fill}
 
 \workitemsone
-{GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral-GCN-Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
+{GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral GNN Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic GNN Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
 	\emph{arXiv preprint arXiv:2006.08924}, 2022 (Rejected by IEEE TNSRE; To be submitted).
 }
@@ -97,21 +97,21 @@
 
 \section{Experience}
 
-\datedsubsection{City University of Hong Kong, China}{Part-time Research Assistant}{Sep 2021 - April 2022}
+\datedsubsection{City University of Hong Kong}{Part-time Research Assistant}{Sep 2021 - April 2022}
 \workitemstwo
 {Investigated the topic of Deep Learning models compression and lightweight, and the deployment on mobile devices.}
 {Funded by my mentor (Dr. Shiqi Wang) to cover tuition fees and living expenses in HK.}
 
 \hspace*{\fill}
 
-\datedsubsection{Tencent Video, Beijing, China}{Recommender System Intern}{Oct - Dec 2020}
+\datedsubsection{Tencent Video, Beijing}{Recommender System Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assisted with the unified architecture regarding the \emph{Rerank} Module for Tencent Video Recommendation System.}
 {Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
 
 \hspace*{\fill} 
 
-\datedsubsection{Philips Research, Shanghai, China}{NLP Research Intern}{Jul - Oct 2020}
+\datedsubsection{Philips Research, Shanghai}{NLP Research Intern}{Jul - Oct 2020}
 \workitemsthree
 {\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here} and the Docker Images are available on the \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
@@ -119,7 +119,7 @@
 
 \hspace*{\fill} 
 
-\datedsubsection{Tsinghua University, Beijing, China}{NLP Summer Intern}{Jun - Aug 2019}
+\datedsubsection{Tsinghua University, Beijing}{NLP Summer Intern}{Jun - Aug 2019}
 \workitemsthree
 {Natural Language Processing (NLP) Interned at State Key Laboratory of Intelligent Technology and Systems (Prof. Xiaoyan Zhu Team), Tsinghua University, China.}
 {I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. \\NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.}
@@ -148,15 +148,15 @@
 \section{Awards}
 
 \noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} (01:38:14) \hfill Oct 2021\\
-2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
-2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
-2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
+2019 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2019.pdf}{[Thesis]}  \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
+2018 Mathematical Contest In Modeling, Jilin, China \href{https://shuyuej.com/files/MCM-2018.pdf}{[Thesis (in Mandarin)]}  \textbf{\emph{First Prize}} \hfill Aug 2018\\
+2018 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2018.pdf}{[Thesis]}  \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
 2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
-Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
-Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
+Innovation Scholarship of NEEPU  \textbf{\emph{Winner}} \hfill 2018/2019\\
+Academic Excellence Scholarship of NEEPU  \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
 Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} (01:47:36) \hfill Jun 2017\\
-2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
-The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
+2015 National High School Math League, China  \textbf{\emph{Second Prize}} \hfill Sep 2015\\
+The 32$^{nd}$ Chinese Physics Olympiad  \textbf{\emph{Third Prize}} \hfill Oct 2015
 
 \hspace*{\fill}
 
