--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -147,23 +147,24 @@
 
 \section{Awards}
 
-\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} (01:38:14) \hfill Oct 2021\\
-2019 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2019.pdf}{[Thesis]}  \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
-2018 Mathematical Contest In Modeling, Jilin, China \href{https://shuyuej.com/files/MCM-2018.pdf}{[Thesis (in Mandarin)]}  \textbf{\emph{First Prize}} \hfill Aug 2018\\
-2018 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2018.pdf}{[Thesis]}  \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
-2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
-Innovation Scholarship of NEEPU  \textbf{\emph{Winner}} \hfill 2018/2019\\
+\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} (01:38:14) \hfill Oct 2021 \\
+2019 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2019.pdf}{[Thesis]}  \textbf{\emph{Honorable Mention}} \hfill Apr 2019 \\
+2018 Mathematical Contest In Modeling, Jilin, China \href{https://shuyuej.com/files/MCM-2018.pdf}{[Thesis (in Mandarin)]}  \textbf{\emph{First Prize}} \hfill Aug 2018 \\
+2018 Interdisciplinary Contest In Modeling, USA \href{https://shuyuej.com/files/ICM-2018.pdf}{[Thesis]}  \textbf{\emph{Successful Participant}} \hfill Apr 2018 \\
+2018 NEEPU Outstanding Student Leader \hfill Oct 2018 \\
+Innovation Scholarship of NEEPU  \textbf{\emph{Winner}} \hfill 2018/2019 \\
 Academic Excellence Scholarship of NEEPU  \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
-Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} (01:47:36) \hfill Jun 2017\\
-2015 National High School Math League, China  \textbf{\emph{Second Prize}} \hfill Sep 2015\\
-The 32$^{nd}$ Chinese Physics Olympiad  \textbf{\emph{Third Prize}} \hfill Oct 2015
+Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} (01:47:36) \hfill Jun 2017 \\
+3000-meter Steeplechase (The $45^{th}$ NEEPU Games), The $7^{th}$ Place \hfill May 2017 \\
+The 32$^{nd}$ Chinese Physics Olympiad, China  \textbf{\emph{Third Prize}} \hfill Oct 2015 \\
+2015 National High School Math League, China  \textbf{\emph{Second Prize}} \hfill Sep 2015
 
 \hspace*{\fill}
 
 \section{Professional Skills}
 
 \noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C++/C/Embedded C, R, and JavaScript \\
-\textbf{Libraries}: TensorFlow (Preferred), PyTorch \\
+\textbf{Libraries}: TensorFlow, PyTorch \\
 \textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker, K8s \\
 \textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
 
