--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -12,11 +12,11 @@
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
 {(+852) 5460-4494}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
-{\href{https://resume.github.io/?SuperBruceJia}{GitHub Résumé}}
+{\href{https://resume.github.io/?SuperBruceJia}{GitHub R\'esum\'e}}
 {\href{http://shuyuej.com/blog}{Blog}}
 {\href{https://shuyuej.com/}{Personal Webpage}}
 
-\hspace*{\fill} 
+\hspace*{\fill}
 
 \section{Education}
 \datedsubsection{City University of Hong Kong, Hong Kong, China}{}{May 2021 - Present}
@@ -164,8 +164,8 @@ The 32$^{nd}$ Chinese Physics Olympiad, China  \textbf{\emph{Third Prize}} \hfil
 \section{Professional Skills}
 
 \noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C++/C/Embedded C, R, and JavaScript \\
-\textbf{Libraries}: TensorFlow, PyTorch \\
-\textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker, K8s \\
+\textbf{Libraries}: TensorFlow, PyTorch, Scikit-learn \\
+\textbf{Other frequently-used tools}: Git, Linux Shell, Vim, Markdown, \LaTeX, Docker, K8s \\
 \textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
 
 \end{document}
