--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -10,7 +10,7 @@
 
 \longcontact
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
-{(+86) 138-4460-2327}
+{+852 5460-4494}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
 {\href{https://resume.github.io/?SuperBruceJia}{GitHub R\'esum\'e}}
 {\href{http://shuyuej.com/blog}{Blog}}
@@ -22,7 +22,7 @@
 \datedsubsection{City University of Hong Kong, Hong Kong, China}{}{May 2021 - Present}
 \workitemsthree
 {M.Phil., Computer Science Major, GPA: 3.50/4.0}
-{Supervisor: Dr. Shiqi Wang, Research area: Image Quality Assessment and Perceptual Optimization}
+{Supervisor: Dr. Shiqi Wang, Research area: Computer Vision}
 {Selected coursework: Big Data Algorithms and Techniques (A), Machine Learning Algorithms and Applications (B)}
 
 \datedsubsection{Northeast Electric Power University, Jilin, China}{}{Sep 2016 - Jun 2020}
