--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -19,7 +19,7 @@
 \hspace*{\fill}
 
 \section{Education}
-\datedsubsection{City University of Hong Kong, Hong Kong, China}{}{May 2021 - Present}
+\datedsubsection{City University of Hong Kong, HK}{}{May 2021 - Present}
 \workitemsthree
 {M.Phil., Computer Science Major, GPA: 3.50/4.0}
 {Supervisor: Dr. Shiqi Wang, Research area: Computer Vision}
@@ -65,8 +65,8 @@
 
 \workitemsone
 {GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral GNN Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic GNN Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
-	\emph{arXiv preprint arXiv:2006.08924}, 2022 (Rejected by IEEE TNSRE; To be submitted).
+	\textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
+	\emph{arXiv preprint arXiv:2006.08924}, 2022 (Under Review at IEEE TNNLS).
 }
 
 \hspace*{\fill} 
@@ -97,19 +97,25 @@
 
 \section{Experience}
 
-\datedsubsection{City University of Hong Kong}{Part-time Research Assistant}{Sep 2021 - April 2022}
+\datedsubsection{Samsung Research, Beijing}{Computer Vision Research Intern}{April 2022 - Present}
+\workitemsone
+{Working on Depth-aware Video Panoptic Segmentation (DVPS).}
+
+\hspace*{\fill}
+
+\datedsubsection{City University of Hong Kong, HK}{Part-time Research Assistant}{Sep 2021 - April 2022}
 \workitemstwo
 {Investigated the topic of Deep Learning models compression and lightweight, and the deployment on mobile devices.}
 {Funded by my mentor (Dr. Shiqi Wang) to cover tuition fees and living expenses in HK.}
 
 \hspace*{\fill}
 
-\datedsubsection{Tencent Video, Beijing}{Recommender System Intern}{Oct - Dec 2020}
-\workitemstwo
-{Assisted with the unified architecture regarding the \emph{Rerank} Module for Tencent Video Recommendation System.}
-{Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
-
-\hspace*{\fill} 
+%\datedsubsection{Tencent Video, Beijing}{Recommender System Intern}{Oct - Dec 2020}
+%\workitemstwo
+%{Assisted with the unified architecture regarding the \emph{Rerank} Module for Tencent Video Recommendation System.}
+%{Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
+%
+%\hspace*{\fill} 
 
 \datedsubsection{Philips Research, Shanghai}{NLP Research Intern}{Jul - Oct 2020}
 \workitemsthree
@@ -127,23 +133,23 @@
 
 \hspace*{\fill} 
 
-\section{Selected Projects}
-
-\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
-\workitemsfour
-{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
-{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
-{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
-{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 300+ GitHub stars.}
-
-\hspace*{\fill} 
-
-\noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
-\workitemstwo
-{Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
-{The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
-
-\hspace*{\fill}
+%\section{Selected Projects}
+%
+%\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
+%\workitemsfour
+%{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
+%{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
+%{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
+%{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 300+ GitHub stars.}
+%
+%\hspace*{\fill} 
+%
+%\noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
+%\workitemstwo
+%{Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
+%{The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
+%
+%\hspace*{\fill}
 
 \section{Awards}
 
@@ -165,7 +171,8 @@ The 32$^{nd}$ Chinese Physics Olympiad, China  \textbf{\emph{Third Prize}} \hfil
 
 \noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C++/C/Embedded C, R, and JavaScript \\
 \textbf{Libraries}: TensorFlow, PyTorch, Scikit-learn \\
-\textbf{Other frequently-used tools}: Git, Linux Shell, Vim, Markdown, \LaTeX, Docker, K8s \\
-\textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
+\textbf{Other frequently-used tools}: Git, SVN, Linux Shell, Vim, Markdown, \LaTeX, Docker, K8s \\
+\textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110 \\
+\textbf{Hobby}: Hiking, Traveling, Photography, Coding, Research, Marathon, Running
 
 \end{document}
