--- a/resume/ShuyueJIA-résumé.tex
+++ b/resume/ShuyueJIA-résumé.tex
@@ -30,6 +30,7 @@
 \hspace*{\fill}
 
 \setlength{\baselineskip}{16pt}
+
 % ---------------------------------------------------------------------------------------
 
 \section{\textbf{Contact Information}}
@@ -41,8 +42,7 @@
 % ---------------------------------------------------------------------------------------
 
 \section{\textbf{Research Interests}}
-
-\noindent I am a Ph.D.~student working on AI Foundation Models,~\eg, Pre-trained Large Language Models (LLMs), Generative AI, and Computer Vision. My ultimate goal is to~\textbf{develop safe, reliable, and extensible Artificial General Intelligence systems} that can improve human lives.
+\noindent I am a Ph.D.~student working on AI Foundation Models,~\eg, Pre-trained Large Language Models (LLMs), Generative AI, and Computer Vision. My ultimate goal is to~\textbf{develop safe, reliable, and extensible Artificial General Intelligence systems} that can better understand our physical world and generate trustworthy content.
 
 \hspace*{\fill}
 
@@ -131,6 +131,8 @@ Yan Shi, Xiaofei Jia, Hangcheng Yuan, \textbf{Shuyue Jia}, Jingjing Liu, Hong Me
 
 \hspace*{\fill}
 
+% ---------------------------------------------------------------------------------------
+
 \subsection{\textbf{Refereed Conference and Workshop Publications}}
 \workitemsone
 {No-reference Image Quality Assessment via Non-local Dependency Modeling~\href{https://ieeexplore.ieee.org/abstract/document/9950035}{[\aiIEEE~Paper]}~\href{https://github.com/SuperBruceJia/NLNet-IQA}{[\faGithub~Codes]}~\href{https://shuyuej.com/files/MMSP/MMSP22_Slides.pdf}{[\faFile~Slides]}~\href{https://shuyuej.com/files/MMSP/MMSP22_Poster.pdf}{[\faFile~Poster]}\\
@@ -139,6 +141,8 @@ Yan Shi, Xiaofei Jia, Hangcheng Yuan, \textbf{Shuyue Jia}, Jingjing Liu, Hong Me
 }
 
 \hspace*{\fill}
+
+% ---------------------------------------------------------------------------------------
 
 \subsection{\textbf{Thesis}}
 \workitemsone
